# FedCore

./: .gitignore  LICENSE  README.md  README.rst  WidgetProject.Ipynb  experiments.py  object_detection.ipynb  object_detection_quant.ipynb  pyproject.toml  requirements.txt  setup.py  test.Ipynb  test_llm_hooks.py  test_llm_trainer.py  test_trainer_factory.py  tutorial_ru.md
.github/workflows/: docs.yml  pypi_publish.yml  unit_test.yml
.ipynb_checkpoints/: test copy-checkpoint.Ipynb  test-checkpoint.Ipynb  visual-checkpoint.Ipynb
datasets/Small/: Small.yaml
datasets/temp/: temp.yaml
docs/: NTO_INSERT_BLOCK.md  conf.py  index.rst  modules.rst  requirements.txt  tutorial_ru.rst
docs/api/: fedcore.algorithm.distillation.rst  fedcore.algorithm.low_rank.reassembly.rst  fedcore.algorithm.low_rank.rst  fedcore.algorithm.pruning.rst  fedcore.algorithm.quantization.rst  fedcore.algorithm.rst  fedcore.api.rst  fedcore.api.utils.rst  fedcore.architecture.rst  (+31 more)
examples/: Dockerfile  app.py  docker-compose.yml  model_exporter_docker_demo.ipynb  resnet18_export_onnx_demo.ipynb  resnet18_low_rank_demo.ipynb  resnet18_pruning_demo.ipynb  resnet18_quantization_demo.ipynb  tmp.py  tmp_lr_cond.ipynb
experiment_resnet152/: experiment_resnet152.py
experiments/: moe_pruning_exp.ipynb
fedCore_class/: fedcore_wrapper.py
fedcore/: __init__.py
pdl/: pdl_test.py
pretrain_models/: InceptionNet_base.pth
tdecomp/: _base.py  output_formats.py  utils.py
tests/: test_metrics_smoke.py
validation_experiment/: no_prune.py  prune_050.py  prune_075.py  prune_090.py  visualize.ipynb
(+1642 files in other folders)
